docs/errors.txt
================================================================
                  AI-ASSISTED COMMIT WORKFLOW                   
================================================================
Checking Python dependencies in Poetry environment...
Loaded environment variables from .env file.
✅ DeepSeek API key found.
   Using model: deepseek-chat
📋 Step 1: Cleaning up and adding specific files for this commit
Cleaning up problematic files...
Adding workflow files...
Files added successfully
📚 Step 2: Running documentation update
Running documentation update...
[2025-05-30 02:03:54] [INFO] Starting documentation management script
[2025-05-30 02:03:55] [INFO] Updated documentation for: /home/michaelnewham/Projects/create_python_project
[2025-05-30 02:03:55] [INFO] Updated documentation for: /home/michaelnewham/Projects/create_python_project/src
[2025-05-30 02:03:55] [INFO] Updated documentation for: /home/michaelnewham/Projects/create_python_project/tests
[2025-05-30 02:03:55] [INFO] Updated documentation for: /home/michaelnewham/Projects/create_python_project/scripts
[2025-05-30 02:03:56] [INFO] Updated documentation for: /home/michaelnewham/Projects/create_python_project/docs
[2025-05-30 02:03:56] [INFO] Updated documentation for: /home/michaelnewham/Projects/create_python_project/ai-docs
📎 Adding documentation changes to git
✅ Documentation updated and staged successfully
🔍 Step 3: Running full linting and code quality checks
Running Black code formatting (attempt 1/3)...
black....................................................................Failed
- hook id: black
- files were modified by this hook

reformatted src/create_python_project/create_python_project.py

All done! ✨ 🍰 ✨
1 file reformatted, 23 files left unchanged.

✅ Black code formatting passed!
/home/michaelnewham/Projects/create_python_project/scripts/manage_logs.sh: line 43: logs/: Is a directory
/home/michaelnewham/Projects/create_python_project/scripts/manage_logs.sh: line 44: ├──: command not found
/home/michaelnewham/Projects/create_python_project/scripts/manage_logs.sh: line 45: └──: command not found
Running isort import sorting (attempt 1/3)...
isort....................................................................Passed
✅ isort import sorting passed!
/home/michaelnewham/Projects/create_python_project/scripts/manage_logs.sh: line 43: logs/: Is a directory
/home/michaelnewham/Projects/create_python_project/scripts/manage_logs.sh: line 44: ├──: command not found
/home/michaelnewham/Projects/create_python_project/scripts/manage_logs.sh: line 45: └──: command not found
Running Ruff linting (attempt 1/3)...
ruff.....................................................................Failed
- hook id: ruff
- exit code: 1
- files were modified by this hook

src/create_python_project/create_python_project.py:1335:1: W293 Blank line contains whitespace
     |
1333 |    # Run tests
1334 |    poetry run pytest
1335 |    
     | ^^^ W293
1336 |    # Format code
1337 |    poetry run black src/
     |
     = help: Remove whitespace from blank line

src/create_python_project/create_python_project.py:1338:1: W293 Blank line contains whitespace
     |
1336 |    # Format code
1337 |    poetry run black src/
1338 |    
     | ^^^ W293
1339 |    # Type checking
1340 |    poetry run mypy src/
     |
     = help: Remove whitespace from blank line

Found 3 errors (1 fixed, 2 remaining).
No fixes available (2 hidden fixes can be enabled with the `--unsafe-fixes` option).

✅ Ruff linting passed!
/home/michaelnewham/Projects/create_python_project/scripts/manage_logs.sh: line 43: logs/: Is a directory
/home/michaelnewham/Projects/create_python_project/scripts/manage_logs.sh: line 44: ├──: command not found
/home/michaelnewham/Projects/create_python_project/scripts/manage_logs.sh: line 45: └──: command not found
Running Flake8 linting (attempt 1/3)...
flake8...................................................................Passed
✅ Flake8 linting passed!
/home/michaelnewham/Projects/create_python_project/scripts/manage_logs.sh: line 43: logs/: Is a directory
/home/michaelnewham/Projects/create_python_project/scripts/manage_logs.sh: line 44: ├──: command not found
/home/michaelnewham/Projects/create_python_project/scripts/manage_logs.sh: line 45: └──: command not found
Running mypy type checking (attempt 1/3)...
mypy.....................................................................Failed
- hook id: mypy
- exit code: 1

src/create_python_project/create_python_project.py:60: error: Incompatible default for argument "icon" (default has type "None", argument has type "str")  [assignment]
src/create_python_project/create_python_project.py:60: note: PEP 484 prohibits implicit Optional. Accordingly, mypy has changed its default to no_implicit_optional=True
src/create_python_project/create_python_project.py:60: note: Use https://github.com/hauntsaninja/no_implicit_optional to automatically upgrade your codebase
Found 1 error in 1 file (checked 24 source files)

✅ mypy type checking passed!
/home/michaelnewham/Projects/create_python_project/scripts/manage_logs.sh: line 43: logs/: Is a directory
/home/michaelnewham/Projects/create_python_project/scripts/manage_logs.sh: line 44: ├──: command not found
/home/michaelnewham/Projects/create_python_project/scripts/manage_logs.sh: line 45: └──: command not found
✅ All linting and code quality checks passed!
💭 Step 4: Generating commit message

^CTraceback (most recent call last):
  File "/home/michaelnewham/Projects/create_python_project/scripts/deepseek_commit_message.py", line 78, in <module>
    main()
    ~~~~^^
  File "/home/michaelnewham/Projects/create_python_project/scripts/deepseek_commit_message.py", line 58, in main
    response = requests.post(
        "https://api.deepseek.com/v1/chat/completions",
        headers=headers,
        data=json.dumps(data),
    )
  File "/home/michaelnewham/Projects/create_python_project/.venv/lib/python3.13/site-packages/requests/api.py", line 115, in post
    return request("post", url, data=data, json=json, **kwargs)
  File "/home/michaelnewham/Projects/create_python_project/.venv/lib/python3.13/site-packages/requests/api.py", line 59, in request
    return session.request(method=method, url=url, **kwargs)
           ~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/michaelnewham/Projects/create_python_project/.venv/lib/python3.13/site-packages/requests/sessions.py", line 589, in request
    resp = self.send(prep, **send_kwargs)
  File "/home/michaelnewham/Projects/create_python_project/.venv/lib/python3.13/site-packages/requests/sessions.py", line 703, in send
    r = adapter.send(request, **kwargs)
  File "/home/michaelnewham/Projects/create_python_project/.venv/lib/python3.13/site-packages/requests/adapters.py", line 667, in send
    resp = conn.urlopen(
        method=request.method,
    ...<9 lines>...
        chunked=chunked,
    )
  File "/home/michaelnewham/Projects/create_python_project/.venv/lib/python3.13/site-packages/urllib3/connectionpool.py", line 787, in urlopen
    response = self._make_request(
        conn,
    ...<10 lines>...
        **response_kw,
    )
  File "/home/michaelnewham/Projects/create_python_project/.venv/lib/python3.13/site-packages/urllib3/connectionpool.py", line 464, in _make_request
    self._validate_conn(conn)
    ~~~~~~~~~~~~~~~~~~~^^^^^^
  File "/home/michaelnewham/Projects/create_python_project/.venv/lib/python3.13/site-packages/urllib3/connectionpool.py", line 1093, in _validate_conn
    conn.connect()
    ~~~~~~~~~~~~^^
  File "/home/michaelnewham/Projects/create_python_project/.venv/lib/python3.13/site-packages/urllib3/connection.py", line 741, in connect
    sock_and_verified = _ssl_wrap_socket_and_match_hostname(
        sock=sock,
    ...<14 lines>...
        assert_fingerprint=self.assert_fingerprint,
    )
  File "/home/michaelnewham/Projects/create_python_project/.venv/lib/python3.13/site-packages/urllib3/connection.py", line 920, in _ssl_wrap_socket_and_match_hostname
    ssl_sock = ssl_wrap_socket(
        sock=sock,
    ...<8 lines>...
        tls_in_tls=tls_in_tls,
    )
  File "/home/michaelnewham/Projects/create_python_project/.venv/lib/python3.13/site-packages/urllib3/util/ssl_.py", line 480, in ssl_wrap_socket
    ssl_sock = _ssl_wrap_socket_impl(sock, context, tls_in_tls, server_hostname)
  File "/home/michaelnewham/Projects/create_python_project/.venv/lib/python3.13/site-packages/urllib3/util/ssl_.py", line 524, in _ssl_wrap_socket_impl
    return ssl_context.wrap_socket(sock, server_hostname=server_hostname)
           ~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.13/ssl.py", line 455, in wrap_socket
    return self.sslsocket_class._create(
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~^
        sock=sock,
        ^^^^^^^^^^
    ...<5 lines>...
        session=session
        ^^^^^^^^^^^^^^^
    )
    ^
  File "/usr/lib/python3.13/ssl.py", line 1076, in _create
    self.do_handshake()
    ~~~~~~~~~~~~~~~~~^^
  File "/usr/lib/python3.13/ssl.py", line 1372, in do_handshake
    self._sslobj.do_handshake()
    ~~~~~~~~~~~~~~~~~~~~~~~~~^^
KeyboardInterrupt